@@ -1,5 +1,9 @@
 2003-07-16  Benjamin Kosnik  <bkoz@redhat.com>
 
+	* include/ext/pod_char_traits.h: Add state template argument.
+
+2003-07-16  Benjamin Kosnik  <bkoz@redhat.com>
+
 	* include/bits/locale_facets.h (__num_base::_S_atoms_in): Add -+xX.
 	(num_get::_M_convert_int): To _M_insert_int.
 	(num_get::_M_convert_float): To _M_insert_float.	
